Vertically centers FAQ titles and fixes div spacing on the individual FAQ categories

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,22 +1,23 @@
 body {
   height: 100vh;
-  font-family: "Maven Pro", sans-serif;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 header {
   background-color: #30a0e1;
 }
 
+.headings {
+  position: relative;
+  top: calc(100vh * 0.4);
+}
+
 h1 {
-  font-family: "Exo", sans-serif;
+  font-family: 'Exo', sans-serif;
 }
 
 h2 {
-  font-family: "Hind Vadodara", sans-serif;
-}
-
-.card {
-  margin: auto;
+  font-family: 'Hind Vadodara', sans-serif;
 }
 
 .is-clicked {
